fixed styling and spacing

--- a/css/html5audio.css
+++ b/css/html5audio.css
@@ -17,6 +17,7 @@
 	top:0px;
 	left:0px;
 	width:100%;
+	margin-top:15px;
 }
 
 /* player audio name */
